needed_on_adminws/k8s/istio-ootb/my-istio-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  # if gateway and virtualservice are in different ns, use prfix
  # https://fabianlee.org/2021/04/09/kubernetes-istio-gateway-in-a-different-namespace-than-virtualservice/
  - gke-system/istio-autogenerated-k8s-ingress
  http:
  - match:
    - uri:
        prefix: /istio
    route:
    - destination:
        host: my-istio-service
        port:
          number: 80
